MAJ Template version1

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "git": "^0.1.5",
     "materialize-css": "^0.100.2",
+    "modernizr": "^3.6.0",
     "npm-git-install": "^0.3.0",
     "private-package-name": "git@private.git.server:user/repo.git#revision",
     "public-package-name": "https://github.com/user/repo.git#revision",
