--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
               "node_modules/materialize-css/dist/css/materialize.min.css" 
             ],
             "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/script.js"
             ]
           },
           "configurations": {
