Menu et page d'accueil

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "git": "^0.1.5",
-    "materialize-css": "^0.100.2",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.1",
     "modernizr": "^3.6.0",
     "npm-git-install": "^0.3.0",
     "private-package-name": "git@private.git.server:user/repo.git#revision",
